force-app/main/default/objects/Custom_Setting_List__c/Custom_Setting_List__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting List</description>
    <label>Custom Setting List</label>
</CustomObject>