force-app/main/default/objects/Custom_Setting_List__c/fields/Custom_Setting_List_ChackBox__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setting_List_ChackBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Setting List ChackBox</description>
    <inlineHelpText>Custom Setting List ChackBox</inlineHelpText>
    <label>Custom Setting List ChackBox</label>
    <type>Checkbox</type>
</CustomField>