force-app/main/default/objects/Custom_Setting_List__c/fields/Custom_Setting_List_Number__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setting_List_Number__c</fullName>
    <defaultValue>123456789</defaultValue>
    <description>Custom Setting List Number</description>
    <inlineHelpText>Custom Setting List Number</inlineHelpText>
    <label>Custom Setting List Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>