force-app/main/default/objects/Custom_Setting_List__c/fields/Custom_Setting_List_Text__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setting_List_Text__c</fullName>
    <description>Custom Setting List Text</description>
    <inlineHelpText>Custom Setting List Text</inlineHelpText>
    <label>Custom Setting List Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>